# codewithpapers

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  DATABASE_SETUP.md  DATABASE_STATUS.md  DEPLOYMENT.md  GITHUB_PAGES_SETUP.md  PWC_FEATURES_ANALYSIS.md  README.md  add_abstracts.py  add_final_abstracts.py  benchmark_metrics.yaml  check_abstract_progress.py  create-tables-simple.sql  create-tables-via-client.js  create-tables.js  execute-migrations.js  execute-sql-direct.js  extract_all_abstracts.py  extract_metrics.py  index.html  link-supabase.sh  list-all-tables.js  list-tables.js  package-lock.json  package.json  playwright.config.ts  pyproject.toml  run-all-migrations.sql  test-connection.js  vite.config.js
.github/workflows/: process-submissions.yml  release-binaries.yml  validate-submissions.yml
assets/: index-8eGcA4ZC.css  index-Blz0yUVT.js  index-CNai91wv.js
backend/: Cargo.toml  fly.toml
backend/src/: lib.rs  main.rs
backend/src/search/: index.rs  mod.rs  query.rs  schema.rs
backend/tests/: api_tests.rs
maintenance_scripts/: .gitignore  CLAUDE.md  README.md  README_scraper.md  archive_scraper.py  data_processor.py  merge_data.py  requirements_scraper.txt  scraper_config.yaml
plans/: todo1.md
playwright-report/: index.html
public/: benchmark_metrics.yaml  datasets.yaml
scripts/: README.md  check_load_progress.py  create_database_tables.py  download_pwc_data.py  inspect_parquet.py  load_pwc_data_to_postgres.py  stream_remaining_data.py  test_load_sample.py  test_postgres_connection.py
src/: App.css  App.jsx  DatasetsView.jsx  PapersView.jsx  index.css
src/components/: PaperCard.css  PaperCard.jsx
src/lib/: README.md  api.js  supabase.js
submissions/: README.md  example.yaml
supabase/: README.md  migrate.sh  pending-migrations.sql  run-migrations-simple.js  run_migrations.js  setup-migrations.sql
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 001_initial_schema.sql  002_test_connection.sql
tests/: visual.spec.ts
